[API] > Clean the code